<resources>

    <string name="app_name">Kuma Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_string">Collabtive Login</string>
    <string name="project_list">Project List</string>
    <string name="tv_project_name">Project Name</string>
    <string name="tv_start_project_date">Start Date: 1/1/2012</string>
    <string name="tv_end_project_date">End Date: 12/12/2013</string>
    <string name="tv_project_duration">Duration: 11/11/2011 sd 12/12/2012</string>
    <string name="milestones_list">Milestone List</string>
    <string name="tv_milestone_name">Milestone Name</string>
    <string name="tv_start_milestone_date">Start Date: 1/1/2012</string>
    <string name="tv_end_milestone_date">End Date: 12/12/2013</string>
    <string name="tv_milestone_duration">Duration: 11/11/2011 sd 12/12/2012</string>
    
    <string name="tasklist_list">Tasklist</string>
    <string name="tv_tasklist_name">Tasklist Name</string>
    <string name="tv_start_tasklist_date">Start Date: 1/1/2012</string>
    <string name="tv_tasklist_duration">Start From: 11/11/2011</string>
    <string name="tv_tasklist_on_milestone">On Milestone: some milestone</string>
    
    <string name="task_list">Task</string>
    <string name="tv_task_name">Task Name</string>
    <string name="tv_start_task_date">Start Date: 1/1/2012</string>
    <string name="tv_task_duration">Start From: 11/11/2011</string>
    
    <string name="file_list">Files</string>
    <string name="tv_file_name">/File</string>
    <string name="tv_file_path">/project/standard/directory/</string>
    
    <string name="bt_add_project">add project</string>
    <string name="remember_me">remember me</string>

    <!-- add project string -->
    <string name="label_add_project">Add Project</string>
    <string name="tv_add_project_name">Project Name</string>
    <string name="tv_add_project_description">Project Description</string>
    <string name="tv_add_project_budget">Budget</string>
    <string name="bt_add_new_project">Add New Project</string>
    <string name="bt_clear_new_project">Clear All</string>
    <string name="tv_add_project_start_project">Start Project</string>
    <string name="tv_add_project_end_project">End Project</string>
    <string name="cb_assignme">Assign me</string>
    <string name="bt_select_user">Select Assigned User</string>

    <!-- edit project string -->
    <string name="label_edit_project">Edit Project</string>
    <string name="tv_edit_project_name">Project Name</string>
    <string name="tv_edit_project_description">Project Description</string>
    <string name="tv_edit_project_budget">Budget</string>
    <string name="bt_edit_new_project">Edit Project</string>
    <string name="bt_clear_edit_project">Clear All</string>
    <string name="tv_edit_project_start_project">Start Project</string>
    <string name="tv_edit_project_end_project">End Project</string>

    <!-- select user list -->
    <string name="label_select_users">Select Users</string>
    <string name="tv_select_user_name">Username</string>
    <string name="tv_select_user_email">User Email: some_email@collabtive.com</string>
    <string name="bt_confirm_select_user">Confirm Selection</string>

    <!-- add milestones string -->
    <string name="label_add_milestone">Add Milestone</string>
    <string name="tv_add_milestones_name">Milestone Name</string>
    <string name="tv_add_milestones_description">Milestone Description</string>
    <string name="tv_add_milestones_budget">Budget</string>
    <string name="bt_add_new_milestones">Add New Milestone</string>
    <string name="bt_clear_new_milestones">Clear All</string>
    <string name="tv_add_milestones_start">Start Milestone</string>
    <string name="tv_add_milestones_end">End Milestone</string>
    <string name="cb_assignme_milestones">Assign me</string>
    <string name="bt_select_user_milestones">Select Assigned User</string>

    <!-- edit milestones string -->
    <string name="label_edit_milestone">Edit Milestone</string>
    <string name="tv_edit_milestone_name">Milestone Name</string>
    <string name="tv_edit_milestone_description">Milestone Description</string>
    <string name="bt_edit_new_milestone">Edit Milestone</string>
    <string name="bt_clear_edit_milestone">Clear All</string>
    <string name="tv_edit_milestone_start">Start Milestone</string>
    <string name="tv_edit_milestone_end">End Milestone</string>
    <string name="cb_edit_milestone_finish">Deactivate Milestone</string>
    
    <!-- add tasklist string -->
    <string name="label_add_tasklist">Add Tasklist</string>
    <string name="tv_add_tasklist_name">Tasklist Name</string>
    <string name="tv_add_tasklist_description">Tasklist Description</string>
    <string name="tv_add_tasklist_budget">Budget</string>
    <string name="bt_add_new_tasklist">Add New Tasklist</string>
    <string name="bt_clear_new_tasklist">Clear All</string>
    <string name="tv_add_tasklist_start">Start Tasklist</string>
    <string name="tv_add_tasklist_end">End Tasklist</string>
    <string name="cb_assignme_tasklist">Assign me</string>
    <string name="sp_add_tasklist_selection">Select Milestone</string>
    <string name="tv_add_tasklist_associated_milestone">Tasklist Associated Milestone </string>
    
    <!-- edit tasklist string -->
    <string name="label_edit_tasklist">Edit Tasklist</string>
    <string name="tv_edit_tasklist_name">Tasklist Name</string>
    <string name="tv_edit_tasklist_description">Tasklist Description</string>
    <string name="bt_edit_new_tasklist">Edit Tasklist</string>
    <string name="bt_clear_edit_tasklist">Clear All</string>
    <string name="tv_edit_tasklist_start">Start Tasklist</string>
    <string name="tv_edit_tasklist_end">End Tasklist</string>
    <string name="tv_edit_tasklist_associated_milestone">Tasklist Associated Milestone</string>
    
        <!-- add task string -->
    <string name="label_add_task">Add Task</string>
    <string name="tv_add_task_name">Task Name</string>
    <string name="tv_add_task_description">Task Description</string>
    <string name="tv_add_task_budget">Budget</string>
    <string name="bt_add_new_task">Add New Task</string>
    <string name="bt_clear_new_task">Clear All</string>
    <string name="tv_add_task_start">Start Task</string>
    <string name="tv_add_task_end">End Task</string>
    <string name="cb_assignme_task">Assign me</string>
    <string name="sp_add_task_selection">Select Milestone</string>
    <string name="tv_add_task_associated_milestone">Task Associated Milestone </string>
    
    <!-- edit task string -->
    <string name="label_edit_task">Edit Task</string>
    <string name="tv_edit_task_name">Task Name</string>
    <string name="tv_edit_task_description">Task Description</string>
    <string name="bt_edit_new_task">Edit Tasklist</string>
    <string name="bt_clear_edit_task">Clear All</string>
    <string name="tv_edit_task_start">Start Task</string>
    <string name="tv_edit_task_end">End Task</string>
    <string name="tv_edit_task_associated_milestone">Tasklist Associated Milestone</string>
    
    <!--  upload file-->
    <string name="tv_upload_file_title">File Title</string>
    <string name="tv_upload_file_desc">Description</string>
    <string name="tv_select_file">Choose file</string>
    <string name="tv_selected_file">Selected File</string>
    <string name="tv_no_file_selected">No file has been selected</string>
    <string name="tv_upload_status">choose file to upload..</string>
    <string name="bt_create_subfolder">create</string>
    <string name="tv_select_upload_path">Select Upload Targer</string>

    <!-- dashboard -->
    <string name="label_dashboard">Project Dashboard</string>
    <string name="label_milestone">milestone</string>
    <string name="label_project_detail">project detail</string>
    <string name="label_task_list">task list</string>
    <string name="label_files">files</string>
    <string name="label_messages">messages</string>
    <string name="label_exit">exit project</string>
    <string name="label_kuma_project">Collabtive Based Kuma Project</string>
    <string name="label_about_kuma_project">about</string>

    <!-- Menu -->
    <string name="logout_menu">Logout</string>
    <string name="add_project_menu">Add Project</string>
    <string name="done_editting">Done</string>
    <string name="clear_editting">Clear</string>
    <string name="add_tasklist_menu">Add Tasklist</string>
    
    <!--  preferences-->
    <string name="setting_label">System Setting</string>
    
    <!-- notificator -->
    <string name="tv_updater_notif">Updating Data..</string>
    
    <!--  messaging-->
    <string name="tv_label_create_message">Create New Message</string>
    <string name="tv_label_recent_message">Recent Message</string>
    <string name="tv_user_contact">User Contact</string>
    <string name="tv_message_subject">Message Subject</string>
    <string name="tv_message_content">Message Content</string>
    <string name="auto_complete_messaging">User Contact</string>
    <string name="tv_read_email_content">Load Email Content..</string>
    <string name="bt_reply_email">reply</string>
    
    <!-- Time Tracker -->
    <string name="time_tracker">Time Tracker</string>
    <string name="tv_project_progress">10%</string>
    <string name="tv_project_time_tracker">Time Tracker</string>

</resources>