<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/iv_tasklists_status"
        android:layout_width="40dip"
        android:layout_height="20dip"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/paw" />

    <TextView
        android:id="@+id/tv_tasklist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tasklist_name"
        android:layout_toRightOf="@id/iv_tasklists_status"
        android:padding="5dip"
        android:text="@string/tv_tasklist_name"
        android:textColor="#040404"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tv_tasklist_milestone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tasklist_name"
        android:layout_toRightOf="@id/iv_tasklists_status"
        android:paddingLeft="5dip"
        android:text="@string/tv_tasklist_on_milestone"
        android:textColor="#040404"
        android:textSize="10dip"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tv_tasklist_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tasklist_milestone"
        android:layout_toRightOf="@id/iv_tasklists_status"
        android:padding="5dip"
        android:text="@string/tv_tasklist_duration"
        android:textColor="#000000"
        android:textSize="10dip"
        android:typeface="sans" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow" />

</RelativeLayout>