<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_project_gradient_bg"
    android:orientation="vertical"
    android:padding="20dip" >

    <TextView
        android:id="@+id/tv_user_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:text="@string/tv_user_contact"
        android:textSize="15dip" />

    <AutoCompleteTextView
        android:id="@+id/act_message_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/auto_complete_messaging" >

        <requestFocus />
    </AutoCompleteTextView>
	<TextView
        android:id="@+id/tv_message_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="30dip"
        android:text="@string/tv_message_subject"
        android:textSize="15dip" />

    <EditText
        android:id="@+id/et_message_subject"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_edit_text"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="1"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip" />
    <TextView
        android:id="@+id/tv_message_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="30dip"
        android:text="@string/tv_message_content"
        android:textSize="15dip" />

    <EditText
        android:id="@+id/et_message_content"
        android:layout_width="fill_parent"
        android:layout_height="150dip"
        android:background="@drawable/background_edit_text"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="5"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip" />
 

</LinearLayout>