<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="50dip"
        android:layout_height="60dip"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/friends_default" />

    <TextView
        android:id="@+id/tv_select_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/userPhoto"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:text="@string/tv_select_user_name"
        android:textColor="#040404"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tv_select_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_select_username"
        android:layout_toRightOf="@id/userPhoto"
        android:paddingLeft="10dip"
        android:paddingTop="5dip"
        android:text="@string/tv_select_user_email"
        android:textColor="#000000"
        android:textSize="10dip"
        android:typeface="sans" />

    <CheckBox
        android:id="@+id/cb_select_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

</RelativeLayout>