<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:padding="5dip"
    android:orientation="horizontal" >

       <ImageView
           android:id="@+id/folders"
           android:layout_width="72dip"
           android:layout_height="72dip"
           android:layout_alignParentLeft="true"
           android:src="@drawable/file"
           android:layout_marginTop="5dip"
           android:contentDescription="@string/app_name"/>
       
    <TextView
        android:id="@+id/tv_file_name_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_file_name"
        android:layout_toRightOf="@id/folders"
        android:textColor="#040404"
        android:typeface="sans" 
        android:textSize="20dip"
        android:padding="5dip"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"/>
    
    <TextView
        android:id="@+id/tv_file_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textColor="#000000"
        android:padding="5dip"
        android:textSize="15dip"
        android:layout_marginLeft="10dip"
        android:text="@string/tv_file_path"
        android:layout_below="@id/tv_file_name_file"
        android:layout_toRightOf="@id/folders"/>
	
    <ImageView android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:src="@drawable/arrow"
     	android:layout_alignParentRight="true"
     	android:layout_centerVertical="true"
     	android:contentDescription="@string/app_name"/>

 

</RelativeLayout>